[gd_scene load_steps=11 format=3 uid="uid://2xraxqbjr6q3"]

[ext_resource type="Script" uid="uid://bgjtqe4mcjjnk" path="res://entities/player/scripts/player.gd" id="1_apn28"]
[ext_resource type="PackedScene" uid="uid://d1acb3ydgpw1b" path="res://ui/overlay-info/scenes/info.tscn" id="2_bls4j"]
[ext_resource type="PackedScene" uid="uid://d22k2ss55xjem" path="res://ui/pause-menu/scenes/pause.tscn" id="3_fkugw"]
[ext_resource type="PackedScene" uid="uid://cdaq8exuytosd" path="res://ui/crosshair/scenes/crosshair.tscn" id="4_8fjmc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_twk7w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_apn28"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_twk7w"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t0cpu"]
material = SubResource("StandardMaterial3D_twk7w")
radius = 0.1
height = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_apn28"]
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8h4do"]
height = 1.0

[node name="player" type="CharacterBody3D"]
collision_layer = 8388610
script = ExtResource("1_apn28")
vault_height = 1.5

[node name="hitbox-uncrouched" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_twk7w")

[node name="mesh-uncrouched" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 4
mesh = SubResource("CapsuleMesh_apn28")

[node name="eyes-uncrouched" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0.0202722, 1.574, -0.38828)
layers = 4
mesh = SubResource("CapsuleMesh_t0cpu")

[node name="hitbox_crouched" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_apn28")

[node name="mesh-crouched" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
layers = 4
mesh = SubResource("CapsuleMesh_8h4do")

[node name="eyes-crouched" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0.02, 0.8, -0.259713)
layers = 4
mesh = SubResource("CapsuleMesh_t0cpu")

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
cull_mask = 3
fov = 90.0

[node name="wallchecker" type="RayCast3D" parent="."]
top_level = true

[node name="distancer" type="RayCast3D" parent="."]
top_level = true
target_position = Vector3(0, 0, 0)

[node name="inWallDetector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 1, 0)

[node name="uncrouchDetector" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="flashlight?" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.842242, 0)
visible = false
omni_range = 64.98

[node name="overlay" type="CanvasLayer" parent="."]

[node name="Info" parent="overlay" instance=ExtResource("2_bls4j")]

[node name="Pause" parent="overlay" instance=ExtResource("3_fkugw")]
process_mode = 3

[node name="crosshair" parent="overlay" instance=ExtResource("4_8fjmc")]
z_index = -4
mouse_filter = 2
